# python-result

./: pyproject.toml
src/result/: base.py
src/result/guards/: base.py
src/result/types/: base.py
src/result/utils/: helpers.py
tests/: test_result.py
