[project]
name = "boilerplate-core"
version = "0.1.0"
description = "A minimal starter library providing immutable, type-safe utilities for Python that simplify error handling and reduce reliance on exceptions, featuring a Rust-inspired Result container."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project.urls]
"Source" = "https://github.com/williamsayo/python-boilerplate"
"Documentation" = "https://github.com/williamsayo/python-boilerplate-core#readme"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ty.rules]
'invalid-argument-type' = 'ignore'

